<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/collage"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@string/common_google_play_services_update_title"
        android:gravity="center"
        android:text="New User"
        android:textColor="@color/orangeLogo"
        android:textSize="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:layout_weight=".5"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".5"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/editTextFirstName"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:ems="10"

            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLayout" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:ems="10"

            android:gravity="center_horizontal"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <EditText
            android:id="@+id/editTextConfirm"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/reenterHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:text="@string/cancelBtn"
            app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirm" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:text="@string/sign_up_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirm" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/logo"
            android:progressDrawable="@drawable/circular_progress_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loadingCreateUser"
            android:textColor="@color/gmailBtn"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>